--- a/.github/workflows/SGSI_Build.yml
+++ b/.github/workflows/SGSI_Build.yml
@@ -7,8 +7,8 @@ on:
     types: [started]
     
 env:              
-  ROM_URL: 'https://dl.google.com/developers/android/sc/images/ota/redfin-ota-spp2.210219.008-3d61e529.zip'
-  ZIP_NAME: 'update.zip'
+  ROM_URL: 'https://bigota.d.miui.com/V12.0.14.0.QCDCNXM/miui_DANDELION_V12.0.14.0.QCDCNXM_90538a23c9_10.0.zip'
+  ZIP_NAME: miui_DANDELION_V12.0.14.0.QCDCNXM_90538a23c9_10.0.zip
   OS_TYPE: 'Generic'
   BUILD_TYPE: 'ab'
   REPACK_NAME: 'SGSI.zip'
